# DX12Pactice

./: .gitignore  .gitmodules  CMakeLists.txt  compile_commands.json
.clangd/index/: DirectXMath.h.3DC0DEF47965ED9E.idx  DirectXMathConvert.inl.7C292C47A57937A2.idx  DirectXMathMatrix.inl.8AC7F819151FA22A.idx  DirectXMathMisc.inl.CF0DC94E2A593392.idx  DirectXMathVector.inl.C0F2D44DB1E39BEB.idx  DirectXPackedVector.h.2DB769D01EE72398.idx  DirectXPackedVector.inl.4413A1FB301F966D.idx  XM_FloatingError.cpp.074327B00FE583EE.idx
Common/: D3DApp.cpp  D3DApp.h  MathHelper.cpp  MathHelper.h  UploadBuffer.h  Util.cpp  Util.h
c1/: CMakeLists.txt  XM_FloatingError.cpp
c4/: CMakeLists.txt  InitialzeApp.cpp
c5/: Box3D.cpp  CMakeLists.txt
c5/Shaders/: color.hlsl
doc/: Note.md
